finish reset user password.
